Added URI class and constructor

--- a/ref/default.conf
+++ b/ref/default.conf
@@ -1,3 +1,6 @@
+# http		://	localhost	:	8080	/	images/example.png	?	search=hello	# row=4
+# SCHEME	://	HOST		:	PORT	/	PATH				?	QUERY			#	FRAGMENT_IDENTIFIER
+
 server
 {
 #	server_name	localhost; #optional
