started on config parsing, added strip_comments and ft::split

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,4 +1,5 @@
-server {
+server
+{
 #	server_name	localhost; #optional
 	listen	localhost:8080; #optional
 #	error_page 404 /404.html; #optional
@@ -6,7 +7,7 @@ server {
 #	
 	location [modifier] [URI]
 	{
-		limit_except "GET, POST" {
+		limit_except GET POST {
 			allow 192.168.1.0/32;
 			deny all;
 		}
