--- a/config/default.conf
+++ b/config/default.conf
@@ -15,3 +15,21 @@ server
 		autoindex off; #directory listing
 	}
 }
+
+# server
+# {
+# #	server_name	localhost; #optional
+# 	listen	localhost:8080; #optional
+# #	error_page 404 /404.html; #optional
+# #	client_max_body_size 50M;
+# #	
+# 	location [modifier] [URI]
+# 	{
+# 		limit_except GET POST {
+# 			allow 192.168.1.0/32;
+# 			deny all;
+# 		}
+# 		root /html; #set the request matching URI to proxy_pass:value
+# 		autoindex off; #directory listing
+# 	}
+# }
