--- a/config/default.conf
+++ b/config/default.conf
@@ -7,7 +7,7 @@ server
 #	
 	location [modifier] [URI]
 	{
-		limit_except GET POST {
+		limit_except GET POST HOI {
 			allow 192.168.1.0/32;
 			deny all;
 		}
