soooo this is kinda big, but because of that it's now easy to add functionality to the parser

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,15 +1,15 @@
 server
 {
-#	server_name	localhost; #optional
+	server_name	localhost; #optional
 	listen	localhost:8080; #optional
-#	error_page 404 /404.html; #optional
-#	client_max_body_size 50M;
+	error_page 404 /404.html; #optional
+	client_max_body_size 50M;
 #	
 	location [modifier] [URI]
 	{
 		limit_except GET POST HOI {
-			allow 192.168.1.0/32;
-			deny all;
+			# allow 192.168.1.0/32;
+			# deny all;
 		}
 		root /html; #set the request matching URI to proxy_pass:value
 		autoindex off; #directory listing
