reworked the wacky implementation of creating a class for every property, allocating it and destroying it later, just functions now

--- a/config/default.conf
+++ b/config/default.conf
@@ -5,9 +5,9 @@ server
 	error_page 404 /404.html; #optional
 	client_max_body_size 50M;
 #	
-	location [modifier] [URI]
+	location /
 	{
-		limit_except GET POST HOI {
+		limit_except GET POST {
 			# allow 192.168.1.0/32;
 			# deny all;
 		}
