cleaned up makefile a little bit, and put configuration related files in separate folder

--- a/config/default.conf
+++ b/config/default.conf
@@ -7,10 +7,7 @@ server
 #	
 	location /
 	{
-		limit_except GET POST {
-			# allow 192.168.1.0/32;
-			# deny all;
-		}
+		limit_except GET POST ;
 		root /html; #set the request matching URI to proxy_pass:value
 		autoindex off; #directory listing
 	}
