small fix to Parse.cpp

--- a/config/default.conf
+++ b/config/default.conf
@@ -8,7 +8,7 @@ server
 	location /
 	{
 		limit_except GET POST ;
-		root /html; #set the request matching URI to proxy_pass:value
+		root /html; #change the path matching 'location' to the value of 'root'
 		autoindex off; #directory listing
 	}
 }
