changed map of locations to sort the map based on str.size()

--- a/config/default.conf
+++ b/config/default.conf
@@ -11,6 +11,20 @@ server
 		root /html; #change the path matching 'location' to the value of 'root'
 		autoindex off; #directory listing
 	}
+
+	location /even_longer_path/
+	{
+		limit_except GET POST ;
+		root /html; #change the path matching 'location' to the value of 'root'
+		autoindex off; #directory listing
+	}
+
+	location /path/
+	{
+		limit_except GET POST ;
+		root /html; #change the path matching 'location' to the value of 'root'
+		autoindex off; #directory listing
+	}
 }
 
 # server
