--- a/config/default.conf
+++ b/config/default.conf
@@ -8,8 +8,8 @@ server
 	location /
 	{
 		limit_except GET POST ;
-		root /html; #change the path matching 'location' to the value of 'root'
-		autoindex off; #directory listing
+		root ./; #change the path matching 'location' to the value of 'root'
+		autoindex on; #directory listing
 	}
 
 	location /even_longer_path/
@@ -37,7 +37,7 @@ server
 	location / 
 	{
 		limit_except GET POST ;
-		root /html; #set the request matching URI to proxy_pass:value
+		root ./; #set the request matching URI to proxy_pass:value
 		autoindex off; #directory listing
 	}
 }
