--- a/config/default.conf
+++ b/config/default.conf
@@ -7,9 +7,10 @@ server
 #	
 	location /
 	{
-		limit_except GET POST ;
-		root ./; #change the path matching 'location' to the value of 'root'
+		limit_except HEAD POST ;
+		root ./html; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
+		error_page 405 /whoopsiedaisy.html;
 	}
 
 	location /even_longer_path/
