"functional" root directive, ew 42, ew

--- a/config/default.conf
+++ b/config/default.conf
@@ -7,8 +7,8 @@ server
 #	
 	location /
 	{
-		limit_except HEAD POST ;
-		root ./html; #change the path matching 'location' to the value of 'root'
+		limit_except GET POST ;
+		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
 		error_page 405 /whoopsiedaisy.html;
 	}
