fixed looking up server through server_name

--- a/config/default.conf
+++ b/config/default.conf
@@ -32,6 +32,7 @@ server
 {
 #	server_name	localhost; #optional
 	listen	8080; #optional
+	server_name idk;
 #	error_page 404 /404.html; #optional
 #	client_max_body_size 50M;
 #	
