Cgi now gets php-cgi path from config

--- a/config/default.conf
+++ b/config/default.conf
@@ -11,6 +11,7 @@ server
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
 		error_page 405 /whoopsiedaisy.html;
+		php-cgi /usr/bin/php-cgi;
 	}
 
 	location /even_longer_path/
