--- a/config/default.conf
+++ b/config/default.conf
@@ -7,7 +7,7 @@ server
 #	
 	location /
 	{
-		limit_except GET POST PUT;
+		limit_except GET POST PUT HEAD;
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
 		error_page 405 /whoopsiedaisy.html;
