--- a/config/default.conf
+++ b/config/default.conf
@@ -12,6 +12,7 @@ server
 		autoindex on; #directory listing
 		error_page 405 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
+		auth_basic "Hello there, welcome to my webserverino";
 	}
 
 	location /even_longer_path/
