--- a/config/default.conf
+++ b/config/default.conf
@@ -13,6 +13,7 @@ server
 		error_page 405 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
 		auth_basic "Hello there, welcome to my webserverino";
+		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
 
 	location /even_longer_path/
