POST/PUT without transfer-encoding works again

--- a/config/default.conf
+++ b/config/default.conf
@@ -12,21 +12,21 @@ server
 		autoindex on; #directory listing
 		error_page 405 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
-		auth_basic "Hello there, welcome to my webserverino";
-		auth_basic_user_file ./credentials/userfile.htpasswd;
+#		auth_basic "Hello there, welcome to my webserverino";
+#		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
 
 	location /even_longer_path/
 	{
 		limit_except GET POST ;
-		root /html; #change the path matching 'location' to the value of 'root'
+		root /html/; #change the path matching 'location' to the value of 'root'
 		autoindex off; #directory listing
 	}
 
 	location /path/
 	{
 		limit_except GET POST ;
-		root /html; #change the path matching 'location' to the value of 'root'
+		root /html/; #change the path matching 'location' to the value of 'root'
 		autoindex off; #directory listing
 	}
 }
