Fixed PUT tests

--- a/config/test.conf
+++ b/config/test.conf
@@ -14,7 +14,8 @@ server
 	location /put_test/
 	{
 		limit_except PUT;
-
+        root ./html/uploads/;
+        client_max_body_size 10m;
 	}
 
 	location /post_body/
