Init of the version on vogsphere

--- a/config/default.conf
+++ b/config/default.conf
@@ -4,45 +4,29 @@ server
 	listen	localhost:8080; #optional
 	error_page 404 /404.html; #optional
 	client_max_body_size 50M;
-#	
+
 	location /
 	{
-		limit_except GET POST PUT HEAD;
+		limit_except GET POST HEAD;
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
-		error_page 405 /whoopsiedaisy.html;
+		error_page 404 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
 #		auth_basic "Hello there, welcome to my webserverino";
 #		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
 
-	location /even_longer_path/
-	{
-		limit_except GET POST ;
-		root /html/; #change the path matching 'location' to the value of 'root'
-		autoindex off; #directory listing
-	}
+	location /put_test/
+    {
+    	limit_except PUT;
+        root ./html/uploads/;
+        client_max_body_size 10m;
+    }
 
-	location /path/
-	{
-		limit_except GET POST ;
-		root /html/; #change the path matching 'location' to the value of 'root'
-		autoindex off; #directory listing
-	}
-}
-
-server
-{
-#	server_name	localhost; #optional
-	listen	8080; #optional
-	server_name idk;
-#	error_page 404 /404.html; #optional
-#	client_max_body_size 50M;
-#	
-	location / 
-	{
-		limit_except GET POST ;
-		root ./; #set the request matching URI to proxy_pass:value
-		autoindex off; #directory listing
-	}
+    location /put_test_small/
+    {
+      	limit_except PUT;
+        root ./html/uploads/;
+        client_max_body_size 10;
+    }
 }
