replaced loop in sendResponse, now goes through select each time

--- a/config/default.conf
+++ b/config/default.conf
@@ -1,8 +1,8 @@
 server
 {
-	server_name	localhost; #optional
+	server_name	yeet; #optional
 	listen	localhost:8080; #optional
-	error_page 404 /404.html; #optional
+	error_page 404 /whoopsiedaisy.html; #optional
 	client_max_body_size 50M;
 
 	location /
@@ -10,7 +10,6 @@ server
 		limit_except GET POST HEAD;
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
-		error_page 404 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
 #		auth_basic "Hello there, welcome to my webserverino";
 #		auth_basic_user_file ./credentials/userfile.htpasswd;
