added an extra config

--- a/config/default.conf
+++ b/config/default.conf
@@ -2,7 +2,7 @@ server
 {
 	server_name	yeet; #optional
 	listen	localhost:8080; #optional
-	error_page 404 /whoopsiedaisy.html; #optional
+	error_page 404 /404.html; #optional
 	client_max_body_size 50M;
 
 	location /
@@ -10,10 +10,18 @@ server
 		limit_except GET POST HEAD;
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
+		error_page 404 /whoopsiedaisy.html;
 		php-cgi /usr/bin/php-cgi;
 #		auth_basic "Hello there, welcome to my webserverino";
 #		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
+
+	location /dir/
+    {
+    	limit_except GET;
+        root ./html/;
+        client_max_body_size 10m;
+    }
 
 	location /put_test/
     {
