made more configs for testing

--- a/config/default.conf
+++ b/config/default.conf
@@ -11,17 +11,10 @@ server
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
 		error_page 404 /whoopsiedaisy.html;
-		php-cgi /usr/bin/php-cgi;
+		# php-cgi /usr/bin/php-cgi;
 #		auth_basic "Hello there, welcome to my webserverino";
 #		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
-
-	location /dir/
-    {
-    	limit_except GET;
-        root ./html/;
-        client_max_body_size 10m;
-    }
 
 	location /put_test/
     {
