--- a/config/index_test.conf
+++ b/config/index_test.conf
@@ -4,16 +4,20 @@ server {
 
     location / {
         root ./html/;
-#        index test.html;
     }
-}
 
-server {
-    server_name example.com;
-    listen 127.0.0.1:8080;
-
-    location / {
-        root ./html/;
+    location /dir/ {
+        root ./html/dir/;
         index test.html;
+    }
+
+    location /autoindex_on/ {
+        root ./html/autoindex_on/;
+        autoindex on;
+    }
+
+    location /autoindex_off/ {
+        root ./html/autoindex_off/;
+        autoindex off;
     }
 }
