POST creates new resource if cgi is not defined and path doesn't exist

--- a/config/default.conf
+++ b/config/default.conf
@@ -11,7 +11,7 @@ server
 		root ./html/; #change the path matching 'location' to the value of 'root'
 		autoindex on; #directory listing
 		error_page 404 /whoopsiedaisy.html;
-		# php-cgi /usr/bin/php-cgi;
+		php-cgi /usr/bin/php-cgi;
 #		auth_basic "Hello there, welcome to my webserverino";
 #		auth_basic_user_file ./credentials/userfile.htpasswd;
 	}
