--- a/config/mac_test.conf
+++ b/config/mac_test.conf
@@ -21,7 +21,7 @@ server
 	location /post_body/
 	{
 		limit_except POST;
-		php-cgi ./cgi_tester;
+		php-cgi ./test/cgi_tester;
 		client_max_body_size 100;
 	}
 
@@ -29,7 +29,7 @@ server
 	{
         limit_except POST;
         ext bla;
-        php-cgi ./cgi_tester;
+        php-cgi ./test/cgi_tester;
         client_max_body_size 100m;
 	}
 
